--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "lil-gui": "^0.21.0",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "vite-plugin-glsl": "^1.5.5"
   }
 }
